# brownfield-cartographer

./: .env.example  .gitignore  DEMO_SCRIPT.md  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  app.py  pyproject.toml  test_validation.py
.cartography/: CODEBASE.md  analysis_report.json  cartography_trace.jsonl  datasets.json  edges.json  last_commit.txt  lineage_graph.html  lineage_graph.json  module_graph.html  module_graph.json  modules.json  onboarding_brief.md  transformations.json
.cartography/cache/: cache.db
.cartography/semantic_index/: metadata.json
.cartography_jaffle/: analysis_report.json  dataset_registry.json  lineage_graph.json  module_graph.json
.cartography_jaffle_v2/: analysis_report.json  cartography_trace.jsonl  edges.json  lineage_graph.json  module_graph.json  modules.json  transformations.json
.cartography_ol/: CODEBASE.md  analysis_report.json  cartography_trace.jsonl  edges.json  last_commit.txt  lineage_graph.html  lineage_graph.json  module_graph.html  modules.json  onboarding_brief.md  transformations.json
.cartography_ol/semantic_index/: metadata.json
.cartography_roo/: CODEBASE.md  analysis_report.json  cartography_trace.jsonl  edges.json  last_commit.txt  lineage_graph.html  lineage_graph.json  module_graph.html  modules.json  onboarding_brief.md  transformations.json
.cartography_roo/semantic_index/: metadata.json
.streamlit/: config.toml
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  schemas.py
src/prompts/: day_one_questions.txt  doc_drift_prompt.txt  domain_label_prompt.txt  navigator_system.txt  purpose_prompt.txt
tests/: test_dag_config.py  test_evidence.py  test_graph_api.py  test_integration.py  test_parse_errors.py  test_performance.py  test_schemas.py  test_semanticist.py  test_sql_lineage.py  test_tree_sitter.py
