[project]
name = "brownfield-cartographer"
version = "1.0.0"
description = "Multi-agent codebase intelligence system for rapid FDE onboarding in production environments"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sqlglot>=20.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "litellm>=1.0.0",
    "tiktoken>=0.5.0",
    "diskcache>=5.6.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
cartographer = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:.*Language\\(path, name\\) is deprecated.*:FutureWarning"
]
